# petrock

./: .gitignore  NOTES.md  README.md  download_models.py  pyproject.toml  run_server.sh  server.sh  wsgi.py
UI/: app.py
UI/templates/: index.html
models/: download_ggufs.sh
petrock/: __init__.py  app.py  entities.py  llms.py  main.py  models.py  openCV.py  server_config.json  vision.py  webapp.py
petrock/UI/static/css/: style.css
petrock/static/css/: style.css
petrock/static/js/: personality.js  script.js
petrock/templates/: index.html
tests/: __init__.py  test_classification.py  test_entity_chat.py  test_llama_cpp.py  test_moondream.py  test_vision.py
