[tool.poetry]
name = "petrock"
version = "0.1.0"
description = "A pet rock."
authors = ["David Vaillant <dnv2011@nyu.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
transformers = "^4.40.1"
torchvision = "^0.18.0"
einops = "^0.7.0"
guidance = "^0.1.13"
litellm = "^1.35.32"
llama-cpp-python = "^0.2.68"
# for Raspberry Pi
# llama-cpp-python = { file = "https://github.com/abetlen/llama-cpp-python/releases/download/v0.2.68/llama_cpp_python-0.2.68-cp311-cp311-linux_aarch64.whl" }

[tool.poetry.group.dev.dependencies]
ipython = "^8.24.0"
notebook = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
